appId: com.carlosjimz87.maestrotestingdemo  # Ensure appId is here

---
- waitForAnimationToEnd
- back
- tapOn: "Run"
- extendedWaitUntil:
    visible: "Delayed Operation Completed"
    timeout: 5000

- takeScreenshot: screenshots/details2delayedOp