appId: com.carlosjimz87.maestrotestingdemo

env:
  USERNAME: carlos
  PASSWORD: 1234

---
- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: "TaskFlow"
    timeout: 10000

- tapOn: "Username"
- inputText: ${USERNAME}

- tapOn: "Password"
- inputText: ${PASSWORD}

- hideKeyboard

- tapOn: "Login"

- extendedWaitUntil:
    visible: "My Tasks"
    timeout: 10000
