appId: com.carlosjimz87.maestrotestingdemo

---

- tapOn: "Profile"

- assertVisible: "Profile"

- tapOn: "Logout"

- assertVisible: "Are you sure you want to logout?"

- tapOn:
    text: "Logout"
    index: 1

- extendedWaitUntil:
    visible: "TaskFlow"
    timeout: 5000
